--- a/snprc_ehr/.babelrc
+++ b/snprc_ehr/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets":[
-  "@babel/preset-env",
-  "@babel/preset-react"
+   "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
     "transform-class-properties",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-runtime"
   ]
 }
