--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -47,19 +47,17 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@labkey/api": "0.0.45",
-    "@labkey/components": "^0.56.3",
-    "@types/react": "16.8.19",
-    "@types/react-bootstrap": "0.32.21",
-    "@types/react-dom": "16.8.4",
+    "@labkey/components": "^0.90.0",
     "immutable": "3.8.2",
     "moment": "^2.26.0",
-    "react": "16.8.6",
+    "react": "^16.13.1",
     "react-bootstrap-table": "^4.3.1",
     "react-data-grid": "^7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
     "react-datepicker": "^2.16.0",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-router": "^3.2.6",
     "react-select": "^3.1.0",
     "styled-components": "^5.1.1"
   },
@@ -74,8 +72,12 @@
     "@hot-loader/react-dom": "16.9.0",
     "@types/enzyme": "3.10.5",
     "@types/jest": "^25.2.3",
+    "@types/react": "^16.9.44",
+    "@types/react-bootstrap": "^0.32.22",
     "@types/react-datepicker": "^2.11.1",
+    "@types/react-dom": "^16.9.8",
     "@types/react-hot-loader": "4.1.0",
+    "@types/react-router": "^3.0.23",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "8.0.6",
@@ -104,11 +106,12 @@
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "prettier": "^2.0.5",
-    "react-bootstrap": "0.33.1",
+    "react-bootstrap": "^0.33.1",
     "react-hot-loader": "4.8.8",
     "react-test-renderer": "16.9.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.1.0",
+    "source-map-loader": "^1.0.2",
     "style-loader": "1.0.0",
     "ts-jest": "^26.1.0",
     "ts-loader": "6.0.2",
