--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -48,18 +48,13 @@
     "@babel/runtime": "^7.10.2",
     "@labkey/api": "^1.1.0",
     "@labkey/components": "^0.91.1",
-    "immutable": "3.8.2",
     "moment": "^2.26.0",
     "react": "^16.13.1",
-    "react-bootstrap-table": "^4.3.1",
-    "react-data-grid": "^7.0.0-canary.16",
-    "react-data-grid-addons": "^7.0.0-alpha.24",
+    "react-bootstrap": "^0.33.1",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
-    "react-moment": "^0.9.7",
     "react-router": "^3.2.6",
-    "react-select": "^3.1.0",
-    "styled-components": "^5.1.1"
+    "react-select": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
@@ -75,8 +70,6 @@
     "@types/react": "^16.9.49",
     "@types/react-bootstrap": "^0.32.22",
     "@types/react-datepicker": "^2.11.1",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-hot-loader": "^4.1.1",
     "@types/react-router": "^3.0.23",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -106,7 +99,6 @@
     "node-sass": "^4.14.1",
     "postcss-loader": "3.0.0",
     "prettier": "^2.1.1",
-    "react-bootstrap": "^0.33.1",
     "react-hot-loader": "^4.12.21",
     "react-test-renderer": "^16.13.1",
     "resolve-url-loader": "^3.1.1",
