--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -66,10 +66,13 @@
     "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
     "@types/enzyme": "3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.2.3",
+    "@types/jsdom": "^16.2.4",
     "@types/react": "^16.9.49",
     "@types/react-bootstrap": "^0.32.22",
     "@types/react-datepicker": "^2.11.1",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router": "^3.0.23",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
