--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@labkey/api": "^1.1.0",
-    "@labkey/components": "^0.91.1",
+    "@labkey/components": "0.97.0",
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^0.33.1",
@@ -80,8 +80,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "better-npm-run": "0.1.1",
+    "bootstrap-sass": "3.4.1",
     "cross-env": "5.2.1",
-    "css-loader": "2.1.1",
+    "css-loader": "3.5.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "enzyme-async-helpers": "^0.9.1",
@@ -105,7 +106,7 @@
     "react-hot-loader": "^4.12.21",
     "react-test-renderer": "^16.13.1",
     "resolve-url-loader": "^3.1.1",
-    "sass-loader": "7.1.0",
+    "sass-loader": "8.0.2",
     "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
     "ts-jest": "^26.3.0",
