--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -103,13 +103,13 @@
     "jest-cli": "^26.4.2",
     "jest-teamcity-reporter": "^0.9.0",
     "mini-css-extract-plugin": "^0.11.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "postcss-loader": "3.0.0",
     "prettier": "^2.1.1",
     "react-hot-loader": "^4.12.21",
     "react-test-renderer": "^16.13.1",
     "resolve-url-loader": "^3.1.1",
-    "sass-loader": "8.0.2",
+    "sass-loader": "^10.1.1",
     "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
     "ts-jest": "^26.3.0",
