--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -46,8 +46,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.2",
-    "@labkey/api": "^1.1.0",
-    "@labkey/components": "0.97.0",
+    "@labkey/api": "1.10.0",
+    "@labkey/components": "2.154.1",
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^0.33.1",
