--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -13,4 +13,7 @@ dependencies
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "published", depExtension: "module")
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:dataintegration", depProjectConfig: "published", depExtension: "module")
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:snd", depProjectConfig: "published", depExtension: "module")
+
+            external "org.apache.commons:commons-text:1.9"
+            external "org.projectlombok:lombok:1.18.4"
         }
