--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -15,5 +15,8 @@ dependencies
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:snd", depProjectConfig: "published", depExtension: "module")
 
             external "org.apache.commons:commons-text:1.9"
-            external "org.projectlombok:lombok:1.18.4"
+            compileOnly "org.projectlombok:lombok:1.18.22"
+            annotationProcessor "org.projectlombok:lombok:1.18.22"
+
+            sourceCompatibility = '16'
         }
