--- a/snprc_r24/build.gradle
+++ b/snprc_r24/build.gradle
@@ -23,11 +23,11 @@ configurations {
     }
 }
 
-project.task("transformJar",
-        group: GroupNames.BUILD,
-        type: Jar,
-        description: "Create the transform jar file",
+project.tasks.register("transformJar", Jar)
         {Jar jar ->
+            jar.group = GroupNames.BUILD
+            jar.description = "Create the transform jar file"
+
             jar.from project.sourceSets.transform.output
             jar.from { configurations.transformJars.collect { it.isDirectory() ? it : zipTree(it) }}
             jar.archiveBaseName.set("MicrobiomeTransform")
@@ -38,11 +38,9 @@ project.task("transformJar",
                 attributes "Main-Class": "MicrobiomeTransform"
             }
         }
-)
 
 project.artifacts {
     archives project.tasks.transformJar
 }
 
-project.tasks.module.dependsOn(project.tasks.transformJar)
-
+project.tasks.named('module').configure { dependsOn(project.tasks.transformJar) }
