--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -54,7 +54,10 @@
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router": "^3.2.6",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "@testing-library/jest-dom": "~5.16.5",
+    "@testing-library/react": "~12.1.5",
+    "@testing-library/user-event": "~12.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
