--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -3,70 +3,36 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "setup": "npm install",
-    "build": "npm run clean && better-npm-run build:prod",
-    "start": "better-npm-run build:watch",
-    "build-prod": "npm run build",
-    "clean": "better-npm-run clean",
+    "setup": "npm ci --legacy-peer-deps",
+    "build": "npm run build-dev",
+    "build-dev": "npm run clean && cross-env NODE_ENV=development webpack --config node_modules/@labkey/build/webpack/dev.config.js --color",
+    "build-prod": "npm run clean && cross-env NODE_ENV=production webpack --config node_modules/@labkey/build/webpack/prod.config.js --color --progress --profile",
+    "clean": "rimraf resources/web/snprc_ehr/gen && rimraf resources/views/gen && rimraf resources/web/gen",
+    "start": "cross-env NODE_ENV=development webpack serve --config node_modules/@labkey/build/webpack/watch.config.js",
+    "start-link": "cross-env LINK=true npm run start",
     "test": "cross-env NODE_ENV=test jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand",
-    "teamcity": "better-npm-run build:jest-teamcity",
-    "lint": "better-npm-run lint",
-    "lint-fix": "better-npm-run lint-fix"
+    "teamcity": "cross-env NODE_ENV=test jest --testResultsProcessor=jest-teamcity-reporter",
+    "lint": "eslint --ext .jsx,.js src/client/",
+    "lint-fix": "eslint --ext .jsx,.js --fix src/client/"
   },
   "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
-  "betterScripts": {
-    "build:watch": {
-      "command": "webpack-dev-server --config webpack/dev.config.js",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "build:prod": {
-      "command": "webpack --config webpack/prod.config.js --progress --profile --colors",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "clean": {
-      "command": "rimraf resources/web/snprc_ehr/gen && rimraf resources/views/gen"
-    },
-    "build:jest-teamcity": {
-      "command": "jest --testResultsProcessor=jest-teamcity-reporter",
-      "env": {
-        "NODE_ENV": "test"
-      }
-    },
-    "lint": {
-      "command": "eslint --ext .jsx,.js src/client/"
-    },
-    "lint-fix": {
-      "command": "eslint --ext .jsx,.js --fix src/client/"
-    }
-  },
   "dependencies": {
-    "@babel/runtime": "^7.10.2",
     "@labkey/api": "1.10.0",
     "@labkey/components": "2.154.1",
+    "@testing-library/jest-dom": "~5.16.5",
+    "@testing-library/react": "~12.1.5",
+    "@testing-library/user-event": "~12.8.3",
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^0.33.1",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router": "^3.2.6",
-    "react-select": "^3.1.0",
-    "@testing-library/jest-dom": "~5.16.5",
-    "@testing-library/react": "~12.1.5",
-    "@testing-library/user-event": "~12.8.3"
+    "react-select": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@labkey/build": "^6.12.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -80,14 +46,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^3.0.23",
     "@types/react-select": "^3.0.21",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "better-npm-run": "0.1.1",
     "bootstrap-sass": "3.4.1",
-    "cross-env": "5.2.1",
+    "cross-env": "~7.0.3",
     "css-loader": "3.5.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -118,10 +78,7 @@
     "ts-jest": "^26.3.0",
     "ts-loader": "6.0.2",
     "typescript": "^3.9.5",
-    "url-loader": "1.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "url-loader": "1.1.2"
   },
   "jest": {
     "globals": {
