--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@labkey/api": "1.10.0",
     "@labkey/components": "2.154.1",
+    "@babel/runtime": "^7.10.2",
     "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~12.1.5",
     "@testing-library/user-event": "~12.8.3",
@@ -33,6 +34,8 @@
   },
   "devDependencies": {
     "@labkey/build": "6.12.0-fb-build-jsx.1",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/polyfill": "^7.11.5",
     "@hot-loader/react-dom": "^16.13.0",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -46,6 +49,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^3.0.23",
     "@types/react-select": "^3.0.21",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap-sass": "3.4.1",
     "cross-env": "~7.0.3",
     "css-loader": "3.5.3",
