--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -77,7 +77,13 @@
     "testRegex": "(\\.(test|spec))\\.(ts|tsx?)$",
     "testResultsProcessor": "jest-teamcity-reporter",
     "transform": {
-      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "tsconfig": "node_modules/@labkey/build/webpack/tsconfig.json"
+        }
+      ],
       "^.+\\.jsx?$": "babel-jest"
     },
     "snapshotSerializers": [
