--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build-dev",
     "build-dev": "npm run clean && cross-env NODE_ENV=development webpack --config node_modules/@labkey/build/webpack/dev.config.js --color",
     "build-prod": "npm run clean && cross-env NODE_ENV=production webpack --config node_modules/@labkey/build/webpack/prod.config.js --color --progress --profile",
-    "clean": "rimraf resources/web/snprc_ehr/gen && rimraf resources/views/gen && rimraf resources/web/gen",
+    "clean": "rimraf resources/views/gen && rimraf resources/web/gen",
     "start": "cross-env NODE_ENV=development webpack serve --config node_modules/@labkey/build/webpack/watch.config.js",
     "start-link": "cross-env LINK=true npm run start",
     "test": "cross-env NODE_ENV=test jest",
@@ -21,23 +21,23 @@
     "@labkey/components": "2.242.9"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "7.11.5",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
     "@labkey/build": "6.12.0-fb-build-jsx.3",
     "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~12.1.5",
     "@testing-library/user-event": "~12.8.3",
     "@types/enzyme": "3.10.13",
-    "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "29.2.0",
-    "@types/react": "16.14.34",
-    "@types/react-dom": "16.9.17",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^29.2.0",
+    "@types/react": "^16.14.34",
+    "@types/react-dom": "^16.9.17",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "29.2.2",
-    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-jest": "^29.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.7",
+    "enzyme-adapter-react-16": "^1.15.7",
     "enzyme-async-helpers": "^0.9.1",
     "enzyme-to-json": "3.6.2",
     "eslint": "^7.8.1",
@@ -47,12 +47,12 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "jest": "29.2.2",
-    "jest-cli": "29.2.2",
-    "jest-environment-jsdom": "29.2.2",
-    "jest-teamcity-reporter": "0.9.0",
+    "jest": "^29.2.2",
+    "jest-cli": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "jest-teamcity-reporter": "^0.9.0",
     "prettier": "^2.1.1",
-    "react-test-renderer": "16.14.0",
+    "react-test-renderer": "^16.14.0",
     "setimmediate": "1.0.5",
     "ts-jest": "29.0.3"
   },
